# Spatial_Audio_Framework

./: .gitignore  CMakeLists.txt  CUSTOM_INTEL_MKL_INTRUCTIONS.md  ChangeLog.txt  LICENSE.md  README.md  __common_8h.html  __common_8h.js  __common_8h_source.html  __kiss__fft__guts_8h.html  __kiss__fft__guts_8h.js  __kiss__fft__guts_8h_source.html  af_s_t_f_t__internal_8c.html  af_s_t_f_t__internal_8c.js  af_s_t_f_t__internal_8c_source.html  af_s_t_f_t__internal_8h.html  af_s_t_f_t__internal_8h.js  af_s_t_f_t__internal_8h_source.html  af_s_t_f_t__proto_filter_8h.html  af_s_t_f_t__proto_filter_8h.js  af_s_t_f_t__proto_filter_8h_source.html  af_s_t_f_tlib_8c.html  af_s_t_f_tlib_8c.js  af_s_t_f_tlib_8c_source.html  af_s_t_f_tlib_8h.html  af_s_t_f_tlib_8h.js  af_s_t_f_tlib_8h_source.html  ambi__bin_8c.html  ambi__bin_8c.js  ambi__bin_8c_source.html  ambi__bin_8h.html  ambi__bin_8h.js  ambi__bin_8h_source.html  ambi__bin__internal_8c.html  ambi__bin__internal_8c.js  ambi__bin__internal_8c_source.html  ambi__bin__internal_8h.html  ambi__bin__internal_8h.js  ambi__bin__internal_8h_source.html  ambi__dec_8c.html  (+1197 more)
.github/: FUNDING.yml
examples/: CMakeLists.txt
examples/ambi_bin/include/: ambi_bin.h
examples/ambi_bin/src/: ambi_bin.c  ambi_bin_database.h  ambi_bin_internal.c  ambi_bin_internal.h
examples/ambi_dec/include/: ambi_dec.h
examples/ambi_dec/src/: ambi_dec.c  ambi_dec_database.h  ambi_dec_internal.c  ambi_dec_internal.h
examples/ambi_drc/include/: ambi_drc.h
examples/ambi_drc/src/: ambi_drc.c  ambi_drc_database.h  ambi_drc_internal.c  ambi_drc_internal.h
examples/ambi_enc/include/: ambi_enc.h
examples/ambi_enc/src/: ambi_enc.c  ambi_enc_internal.c  ambi_enc_internal.h
examples/array2sh/include/: array2sh.h
examples/array2sh/src/: array2sh.c  array2sh_database.c  array2sh_database.h  array2sh_internal.c  array2sh_internal.h
examples/beamformer/include/: beamformer.h
examples/beamformer/src/: beamformer.c  beamformer_internal.c  beamformer_internal.h
examples/binauraliser/include/: binauraliser.h
examples/binauraliser/src/: binauraliser.c  binauraliser_database.h  binauraliser_internal.c  binauraliser_internal.h
examples/dirass/include/: dirass.h
examples/dirass/src/: dirass.c  dirass_internal.c  dirass_internal.h
examples/include/: _common.h  ambi_bin.h  ambi_dec.h  ambi_drc.h  ambi_enc.h  ambi_roomsim.h  array2sh.h  beamformer.h  binauraliser.h  binauraliser_nf.h  decorrelator.h  dirass.h  matrixconv.h  multiconv.h  panner.h  pitch_shifter.h  powermap.h  rotator.h  sldoa.h  spreader.h  tvconv.h
examples/matrixconv/include/: matrixconv.h
examples/matrixconv/src/: matrixconv.c  matrixconv_internal.c  matrixconv_internal.h
examples/mceq/include/: mceq.h
examples/mceq/src/: mceq.c  mceq_internal.c  mceq_internal.h
examples/multiconv/include/: multiconv.h
examples/multiconv/src/: multiconv.c  multiconv_internal.c  multiconv_internal.h
examples/panner/include/: panner.h
examples/panner/src/: panner.c  panner_database.c  panner_database.h  panner_internal.c  panner_internal.h
examples/pitch_shifter/include/: pitch_shifter.h
examples/pitch_shifter/src/: pitch_shifter.c  pitch_shifter_internal.c  pitch_shifter_internal.h
examples/powermap/include/: powermap.h
examples/powermap/src/: powermap.c  powermap_database.c  powermap_database.h  powermap_internal.c  powermap_internal.h
examples/rotator/include/: rotator.h
examples/rotator/src/: rotator.c  rotator_internal.c  rotator_internal.h
examples/sldoa/include/: sldoa.h
examples/sldoa/src/: sldoa.c  sldoa_database.c  sldoa_database.h  sldoa_internal.c  sldoa_internal.h
extras/safmex/: BUILD_SAFMEX.m  BUILD_SAF_MEX.m  CMakeLists.txt  SAFMEX.md  safmex.h  safmex_afSTFT.c  safmex_afSTFT.m  safmex_faf_IIRFilterbank.c  safmex_faf_IIRFilterbank.m  safmex_generateVBAPgainTable3D.c  safmex_generateVBAPgainTable3D.m  safmex_getSHcomplex.c  safmex_getSHcomplex.m  safmex_getSHreal.c  safmex_getSHreal.m  safmex_latticeDecorrelator.c  safmex_latticeDecorrelator.m  safmex_qmf.c  safmex_qmf.m  safmex_tracker3d.c  safmex_tracker3d.m
framework/: CMakeLists.txt  FRAMEWORK_STRUCTURE.md
framework/include/: afSTFTlib.h  saf.h  saf_bessel.h  saf_cdf4sap.h  saf_externals.h  saf_hoa.h  saf_hrir.h  saf_loudspeaker_presets.h  saf_sensorarray_presets.h  saf_sh.h  saf_sofa_reader.h  saf_utilities.h  saf_utility_decor.h  saf_utility_erb.h  saf_utility_filters.h  saf_utility_loudspeaker_presets.h  saf_utility_matrixConv.h  saf_utility_sort.h  saf_vbap.h
framework/modules/: CMakeLists.txt
framework/resources/: CMakeLists.txt
framework/saf_afstft/: afSTFT_protoFilter.h  afSTFTlib.c  fft4g.c  fft4g.h  vecTools.c  vecTools.h
framework/saf_cdf4sap/: saf_cdf4sap.c
framework/saf_hoa/: saf_hoa.c  saf_hoa_internal.c  saf_hoa_internal.h
framework/saf_hrir/: saf_hrir.c  saf_hrir_internal.c  saf_hrir_internal.h
framework/saf_sh/: saf_sh.c  saf_sh_internal.c  saf_sh_internal.h
framework/saf_utilities/: saf_calloc.c  saf_calloc.h  saf_complex.c  saf_complex.h  saf_decor.c  saf_decor.h  saf_erb.c  saf_erb.h  saf_fft.c  saf_fft.h  saf_filters.c  saf_filters.h  saf_free.c  saf_free.h  saf_loudspeaker_presets.c  saf_loudspeaker_presets.h  saf_malloc.c  saf_malloc.h  saf_matrixConv.c  saf_matrixConv.h  saf_sensorarray_presets.c  saf_sensorarray_presets.h  saf_sort.c  saf_sort.h  saf_veclib.c  saf_veclib.h
framework/saf_vbap/: convhull_3d.h  saf_vbap.c  saf_vbap_internal.c  saf_vbap_internal.h
test/: CMakeLists.txt  main.c  saf_test.c  saf_test.h  saf_test_wrapper.cpp
test/include/: saf_test.h
test/saf_test_VS/: saf_test.vcxproj  saf_test.vcxproj.filters  saf_test_wrapper.cpp  test.sln
test/src/: saf_test.c  saf_test_wrapper.cpp  test__cdf4sap_module.c  test__dvf_module.c  test__examples.c  test__hades_module.c  test__hoa_module.c  test__hrir_module.c  test__resources.c  test__reverb_module.c  test__sh_module.c  test__sofa_reader_module.c  test__tracker_module.c  test__utilities_module.c  test__vbap_module.c
test/test.xcodeproj/: project.pbxproj
test/timer/: timer.c
test/unity/: unity.c
(+928 files in other folders)
